# churn-uplift

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Run_in_Colab.ipynb
src/upliftkit/: __init__.py  cli.py  data.py  evaluate.py  learners.py  metrics.py  pipeline.py
tests/: test_data.py  test_learners.py  test_metrics.py  test_pipeline.py
