[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-uplift"
version = "0.1.0"
description = "Causal/uplift modeling toolkit for retention marketing (S/T-learners, Qini metrics)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Akshay GC" }]
keywords = [
    "uplift-modeling",
    "causal-inference",
    "churn",
    "retention",
    "qini",
    "meta-learners",
    "marketing",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
upliftkit = "upliftkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
# Uppercase `X`/`Xa` etc. are the conventional feature-matrix names in ML code.
ignore = ["N803", "N806"]
